--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-	"AddressBooks": [50001, 50002, 50003, 50004, 50005],
-	"poolsize": [100, 100, 100, 100, 100]
+	"AddressBook":[50001, 50002, 50003, 50004, 50005],
+	"running":[1,2,3],
+	"initial_state":100
 }
